--- a/src/pages/trin4.astro
+++ b/src/pages/trin4.astro
@@ -1,8 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro';
+import Nav from '../components/Nav.astro';
+import Footer from '../components/Footer.astro';
 import Tak from '../components/Tak.astro';
 ---
 
 <Layout>
-    <Tak />
-</Layout> 
+  <Tak />
+</Layout>
