--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -26,5 +26,21 @@ const { title, variant, href } = Astro.props;
     .secondary {
         background-color: var(--cta-secondary);
         color: var(--color-text-secondary);
+        margin: 0px;
+    }
+
+    .tertiary {
+        background-color: var(--cta-tertiary);
+        color: var(--color-text-primary);
+        margin: 0px;
+         padding: 10px 30px;
+    }
+
+    .secondary-2 
+    {
+        margin: 0px;
+        background-color: var(--cta-primary);
+        color: var(--color-text-primary);
+        padding: 10px 30px;
     }
 </style>
