--- a/src/components/Bekraeft.astro
+++ b/src/components/Bekraeft.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 const {} = Astro.props;
 ---
 
-<section class="signup">
+<section id="scrolltoform" class="signup">
   <header class="signup__header">
     <p class="signup__kicker">Online infomøde</p>
     <h1 class="signup__title">Tilmelding</h1>
