--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -185,6 +185,10 @@ cursor: pointer;
 
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .scrollindicator {
     display: flex;
     justify-content: center;
