--- a/src/components/Tak.astro
+++ b/src/components/Tak.astro
@@ -2,7 +2,7 @@
 import Button from './Button.astro';
 ---
 
-<section class="tak">
+<section id="scrolltoform" class="tak">
   <div class="tak__wrap">
     <div class="tak__card">
       <p class="tak__kicker">Online infomøde</p>
