changed min-height vh

--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -65,7 +65,7 @@ const {title, subtitle, point, point1, point2, point3, point4, titleunder, title
 
 .info-container {
 background-color: #EDF5F7;
-height: 90vh;;
+min-height: 90vh;;
 
 }
     
@@ -244,7 +244,7 @@ html {
     justify-content: center;
     gap: 2rem;
     padding: 2rem 4rem;
-    min-height: 600px;
+    min-height: 100vh;
 
 }
 
